# PyHPC

./: .style.yapf  CMakeLists.txt  HPC.ipynb  README.md  cl_utils.py  plotting.py  potential_cpp.cpp  potential_mpi.py  pycuda_test.py  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_win10.txt  setup.py  utils.py
.benchmarks/: .gitignore
potential/: _cl.py  _cl_kernel.py  _cpp.py  _cuda.py  _numba.py  _numpy.py  plotting.py  utils.py
potential/tests/data/: ref_10x10_grid.ndarray
src/potential/: .gitignore  _cl.py  _cpp.py  _cuda.py  _numba.py  _potential.py  _py.py  grid.py  utils.py
src/potential/tests/: test_potential.py
src/pyhpc/: .gitignore  _cl.py  _cl_kernel.py  _cpp.py  _cpp_lib.cpp  _cuda.py  _cuda_kernel.py  _cython.pyx  _numba.py  _py.py  plotting.py  potential.py  utils.py
src/pyhpc/mpi/: __main__.py  _mpi.py
src/pyhpc/potential/: __init__.py  _calculate_grid.py  _simulate.py
src/pyhpc/potential/_calculate_grid_impls/: _cl.py  _cl_kernel.py  _cpp.py  _cpp_lib.cpp  _cuda.py  _cuda_kernel.py  _cython.pyx  _numba.py  _numpy.py  _py.py
src/pyhpc/potential/mpi/: __main__.py  _mpi.py
tests/: test_grid.py  test_potential.py  test_simulate.py
tests/benchmarks/: test_calculate_grid.py
tests/data/: ref_100x100x10_frames.ndarray
tools/: run_and_plot_benchmarks.py  run_calculate_grid.py  run_simulations.py
